--- a/module-1/lab-string-operations/your-code/challenge-1.ipynb
+++ b/module-1/lab-string-operations/your-code/challenge-1.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 15,
    "metadata": {
     "scrolled": true
    },
@@ -71,7 +71,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Grocery List: Bananas, Chocolate, bread, diapers, Ice Cream, Brownie Mix, broccoli.\n"
+      "Grocery List: bananas, bread, brownie mix, broccoli.\n"
      ]
     }
    ],
@@ -79,21 +79,25 @@
     "food_list = ['Bananas', 'Chocolate', 'bread', 'diapers', 'Ice Cream', 'Brownie Mix', 'broccoli']\n",
     "# Your code here:\n",
     "\n",
+    "selected_list = []\n",
     "\n",
-    " \n",
+    "for i in food_list:\n",
+    "    if i.startswith(\"b\"):\n",
+    "        selected_list.append(i)\n",
+    "    if i.startswith(\"B\"):\n",
+    "        selected_list.append(i.lower())\n",
+    "           \n",
     "\n",
-    "text = str(', '.join(food_list)+'.')\n",
-    "text.lower()\n",
+    "joint_selected = str(', '.join(selected_list)+'.')\n",
     "\n",
-    "new = str(\"Grocery List: \")\n",
+    "grocery_string = str(\"Grocery List: \")\n",
     "\n",
-    "grocery = new + text\n",
+    "grocery_list = \"\".join(grocery_string + joint_selected)\n",
     "\n",
-    "for i in grocery:\n",
-    "     if i.startswith('b') == 1:\n",
-    "        grocery.strip(i)\n",
+    "print(grocery_list)\n",
     "\n",
-    "print(grocery)\n",
+    "\n",
+    "\n",
     "\n",
     " \n",
     "\n",
@@ -128,15 +132,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'The area of the circle with radius: 5 is: 78.53981633974483'"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import math\n",
     "\n",
-    "string1 = \"The area of the circle with radius:\"\n",
+    "string1 = \"The area of the circle with radius: \"\n",
     "string2  = \"is:\"\n",
-    "radius = 4.5\n",
+    "radius = 5\n",
+    "import math\n",
     "\n",
     "def area(x, pi = math.pi):\n",
     "    # This function takes a radius and returns the area of a circle. We also pass a default value for pi.\n",
@@ -147,9 +163,18 @@
     "    # Sample Output: 78.53981633\n",
     "    \n",
     "    # Your code here:\n",
+    "    area_of_circle = pi * x * x\n",
+    "    final_string = ''.join(str(string1) + str(x) + \" \" + str(string2) + \" \" + str(area_of_circle))\n",
+    "\n",
     "    \n",
     "    \n",
-    "# Your output string here:"
+    "    return(final_string)\n",
+    "    \n",
+    "    #safer option return(area_of_circle) and print(final_string)\n",
+    "\n",
+    "area(radius, pi = math.pi)\n",
+    "    \n",
+    "    "
    ]
   },
   {
@@ -165,9 +190,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Some': 2, 'say': 3, 'the': 1, 'world': 1, 'will': 1, 'end': 1, 'in': 2, 'fire,': 1, 'ice.': 1, 'From': 1, 'what': 1, 'I’ve': 1, 'tasted': 1, 'of': 2, 'desire': 1, 'I': 3, 'hold': 1, 'with': 1, 'those': 1, 'who': 1, 'favor': 1, 'fire.': 1, 'But': 1, 'if': 1, 'it': 1, 'had': 1, 'to': 1, 'perish': 1, 'twice,': 1, 'think': 1, 'know': 1, 'enough': 1, 'hate': 1, 'To': 1, 'that': 1, 'for': 1, 'destruction': 1, 'ice': 1, 'Is': 1, 'also': 1, 'great': 1, 'And': 1, 'would': 1, 'suffice.': 1}\n"
+     ]
+    }
+   ],
    "source": [
     "poem = \"\"\"Some say the world will end in fire,\n",
     "Some say in ice.\n",
@@ -179,7 +212,21 @@
     "Is also great\n",
     "And would suffice.\"\"\"\n",
     "\n",
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "\n",
+    "\n",
+    "words = poem.split()\n",
+    "\n",
+    "word_appearances = {}\n",
+    "\n",
+    "for word in words:\n",
+    "    if word not in word_appearances:\n",
+    "        word_appearances[word] = 0\n",
+    "    word_appearances[word] += 1\n",
+    "\n",
+    "print(word_appearances)\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -191,10 +238,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['i', 'was', 'angry', 'with', 'my', 'friend', 'told', 'wrath,', 'wrath', 'did', 'end', 'foe:', 'not,', 'grow', 'waterd', 'fears,', 'night', '', 'morning', 'tears:', 'sunned', 'smiles,', 'soft', 'deceitful', 'wiles', 'grew', 'both', 'day', 'till', 'bore', 'apple', 'bright', 'foe', 'beheld', 'shine,', 'he', 'knew', 'that', 'mine', 'into', 'garden', 'stole,', 'when', 'had', 'veild', 'pole', 'glad', 'see', 'outstretched', 'beneath', 'tree']\n"
+     ]
+    }
+   ],
    "source": [
+    "\n",
     "blacklist = ['and', 'as', 'an', 'a', 'the', 'in', 'it']\n",
     "\n",
     "poem = \"\"\"I was angry with my friend; \n",
@@ -217,7 +273,31 @@
     "In the morning glad I see; \n",
     "My foe outstretched beneath the tree.\"\"\"\n",
     "\n",
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "import re\n",
+    "\n",
+    "poem_lower = poem.lower()\n",
+    "poem_new = poem_lower.split()\n",
+    "\n",
+    "poem_clean = []\n",
+    "for word in poem_new:\n",
+    "    poem_clean.append(re.sub(r\"[;.&]\", \"\", word))\n",
+    "              \n",
+    "\n",
+    "unique_poemclean = []\n",
+    "for word in poem_clean:\n",
+    "    if word not in blacklist:\n",
+    "        unique_poemclean.append(word)\n",
+    "        \n",
+    "# eliminating repeated words\n",
+    "unique_poemclean = list(dict.fromkeys(unique_poemclean))\n",
+    "print(unique_poemclean)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -231,14 +311,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['T', 'P']\n"
+     ]
+    }
+   ],
    "source": [
     "poem = \"\"\"The apparition of these faces in the crowd;\n",
     "Petals on a wet, black bough.\"\"\"\n",
     "\n",
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "print(re.findall(r'[A-Z]', poem))"
    ]
   },
   {
@@ -250,13 +339,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['123abc', 'abc123', 'JohnSmith1', 'ABBY4']\n"
+     ]
+    }
+   ],
    "source": [
     "data = ['123abc', 'abc123', 'JohnSmith1', 'ABBY4', 'JANE']\n",
     "\n",
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "data_number = []\n",
+    "for i in data:\n",
+    "    if re.search(r'[\\d]', i):\n",
+    "        data_number.append(i)\n",
+    "        \n",
+    "print(data_number)\n",
+    "\n",
+    "#como hago para que esto me devuelva un output en vez de tener que hacer un print?\n",
+    "        \n",
+    "       "
    ]
   },
   {
@@ -272,13 +379,39 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['123abc', 'abc123', 'JohnSmith1']\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = ['123abc', 'abc123', 'JohnSmith1', 'ABBY4', 'JANE']\n",
+    "# Your code here:\n",
+    "\n",
+    "data_number = []\n",
+    "for i in data:\n",
+    "    if re.search(r'[\\d]', i) and re.search(r'[a-z]', i):\n",
+    "        data_number.append(i)\n",
+    "    else:\n",
+    "        pass\n",
+    "        \n",
+    "    \n",
+    "        \n",
+    "print(data_number)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "data = ['123abc', 'abc123', 'JohnSmith1', 'ABBY4', 'JANE']\n",
-    "# Your code here:\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
