--- a/module-1/lab-string-operations/your-code/challenge-1.ipynb
+++ b/module-1/lab-string-operations/your-code/challenge-1.ipynb
@@ -361,7 +361,8 @@
     "        \n",
     "print(data_number)\n",
     "\n",
-    "#como hago para que esto me devuelva un output en vez de tener que hacer un print?\n",
+    "# como hago para que esto me devuelva un output\n",
+    "# en vez de tener que hacer un print?\n",
     "        \n",
     "       "
    ]
