solutions to nerd challenge

--- a/module-1/lab-string-operations/your-code/challenge-2.ipynb
+++ b/module-1/lab-string-operations/your-code/challenge-2.ipynb
@@ -461,6 +461,72 @@
     " [1 1 0 1 0 0 1]]\n",
     " ```"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'ironhack': 3, 'is': 4, 'cool': 2, 'love': 5, 'am': 0, 'student': 6, 'at': 1}\n",
+      "[[0 0 1 1 1 0 0]\n",
+      " [0 0 0 1 0 1 0]\n",
+      " [1 1 0 1 0 0 1]]\n",
+      "{'ironhack': 1, 'cool': 0, 'love': 2, 'student': 3}\n",
+      "[[1 1 0 0]\n",
+      " [0 1 1 0]\n",
+      " [0 1 0 1]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "\n",
+    "\n",
+    "docs = ['doc1.txt', 'doc2.txt', 'doc3.txt']\n",
+    "\n",
+    "corpus = []\n",
+    "\n",
+    "# Write your code here\n",
+    "for d in docs:\n",
+    "    f=open(d,\"r\")\n",
+    "    corpus.append(f.read())\n",
+    "    f.close()\n",
+    "\n",
+    "#sin stop words\n",
+    "cv = CountVectorizer()\n",
+    "cv_fit=cv.fit_transform(corpus)\n",
+    "\n",
+    "print(cv.vocabulary_)\n",
+    "print(cv_fit.toarray())\n",
+    "\n",
+    "#con stop words\n",
+    "cv2 = CountVectorizer(stop_words='english')\n",
+    "cv2_fit=cv2.fit_transform(corpus)\n",
+    "\n",
+    "print(cv2.vocabulary_)\n",
+    "print(cv2_fit.toarray())\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
