--- a/module-1/lab-string-operations/your-code/challenge-2.ipynb
+++ b/module-1/lab-string-operations/your-code/challenge-2.ipynb
@@ -88,13 +88,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
+    "docs = ['doc1.txt', 'doc2.txt', 'doc3.txt']\n",
     "corpus = []\n",
     "\n",
-    "# Write your code here\n"
+    "for e in docs:\n",
+    "    f = open(e,\"r\")\n",
+    "    corpus.append(f.readline())\n",
+    "\n",
+    "##################################\n",
+    "##################################\n",
+    "\n",
+    "#\"\"\"\"filename = \"doc1.txt\"\n",
+    "\n",
+    "#with open(filename, 'r') as filehandle:  \n",
+    " #   filecontent = filehandle.readlines()\n",
+    "  #  for line in filecontent:\n",
+    "   #     print (line)\n",
+    "\n",
+    "\n",
+    "        \n",
+    "#corpus = [] \n",
+    "#for i in docs:     \n",
+    " #   file = open(i, ‘r’)     \n",
+    "  #  corpus.append(file.readline())        \n",
+    "        \n",
+    "        \n",
+    "# Write your code here"
    ]
   },
   {
@@ -106,9 +129,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Ironhack is cool.', 'I love Ironhack.', 'I am a student at Ironhack.']\n"
+     ]
+    }
+   ],
    "source": [
     "print(corpus)"
    ]
@@ -136,27 +167,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Write your code here"
+    "# Write your code here\n",
+    "import re\n",
+    "words = [i.lower() for i in corpus]\n",
+    "result = \" \".join(words)\n",
+    "\n",
+    "corpues2 = re.findall(\"\\w+\",result)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
     "Now define `bag_of_words` as an empty array. It will be used to store the unique terms in `corpus`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['ironhack', 'is', 'cool', 'i', 'love', 'ironhack', 'i', 'am', 'a', 'student', 'at', 'ironhack']]\n"
+     ]
+    }
+   ],
    "source": [
-    "bag_of_words = []"
+    "\n",
+    "\n",
+    "bag_of_words = []\n",
+    "bag_of_words.append(corpues2)\n",
+    "\n",
+    "print(bag_of_words)"
    ]
   },
   {
@@ -176,7 +226,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Write your code here"
+    "# Write your code here\n",
+    "corpus.split()\n"
    ]
   },
   {
@@ -333,7 +384,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
