--- a/module-1/lab-string-operations/your-code/challenge-2.ipynb
+++ b/module-1/lab-string-operations/your-code/challenge-2.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,13 +88,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "corpus = []\n",
+    "# Write your code here\n",
+    "for i in docs:\n",
+    "    with open(i,\"r\") as f:\n",
+    "        lineas=f.readlines()\n",
+    "        corpus.append(lineas[0])\n",
     "\n",
-    "# Write your code here\n"
+    "#corpus = []\n",
+    "#for e in docs:\n",
+    "#f = open(e,\"r\")\n",
+    "#corpus.append(f.readline())\n",
+    "#print(corpus)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Ironhack is cool.', 'I love Ironhack.', 'I am a student at Ironhack.']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(corpus)"
    ]
   },
   {
@@ -102,15 +128,6 @@
    "metadata": {},
    "source": [
     "Print `corpus`."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(corpus)"
    ]
   },
   {
@@ -136,11 +153,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['ironhack is cool', 'i love ironhack', 'i am a student at ironhack']\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your code here"
+    "# Write your code here\n",
+    "corpus_2=[e.lower().replace(\".\", \"\") for e in corpus]\n",
+    "print(corpus_2)"
    ]
   },
   {
@@ -152,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,11 +199,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Write your code here"
+    "# Write your code here\n",
+    "corpus_3=(' '.join(corpus_2).split(' '))\n",
+    "\n",
+    "for i in corpus_3:\n",
+    "    if i not in bag_of_words:\n",
+    "        bag_of_words.append(i)"
    ]
   },
   {
@@ -192,9 +224,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['ironhack', 'is', 'cool', 'i', 'love', 'am', 'a', 'student', 'at']\n"
+     ]
+    }
+   ],
    "source": [
     "print(bag_of_words)"
    ]
@@ -208,13 +248,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "at\n",
+      "at\n",
+      "at\n"
+     ]
+    }
+   ],
    "source": [
     "term_freq = []\n",
     "\n",
-    "# Write your code here"
+    "# Write your code here\n",
+    "\n",
+    "for x in corpus:\n",
+    "    for x in bag_of_words:\n",
+    "        if x in corpus:\n",
+    "            x+=1\n",
+    "            term_freq.append(x)\n",
+    "    print(x)"
    ]
   },
   {
@@ -228,9 +285,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n"
+     ]
+    }
+   ],
    "source": [
     "print(term_freq)"
    ]
@@ -278,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,7 +398,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
