--- a/module-1/lab-string-operations/your-code/challenge-2.ipynb
+++ b/module-1/lab-string-operations/your-code/challenge-2.ipynb
@@ -72,11 +72,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ironhack is cool.\n"
+     ]
+    }
+   ],
    "source": [
-    "docs = ['doc1.txt', 'doc2.txt', 'doc3.txt']"
+    "\n",
+    "docs = ['doc1.txt', 'doc2.txt', 'doc3.txt',]\n",
+    "\n",
+    "f = open('doc1.txt',\"r\")\n",
+    "print(f.readline())"
    ]
   },
   {
@@ -88,13 +100,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Ironhack is cool.', 'I love Ironhack.', 'I am a student at Ironhack.']\n"
+     ]
+    }
+   ],
    "source": [
     "corpus = []\n",
     "\n",
-    "# Write your code here\n"
+    "# Write your code here\n",
+    "for e in docs:\n",
+    "    f = open(e,\"r\")\n",
+    "    corpus.append(f.readline())\n",
+    "    \n",
+    "print(corpus)"
    ]
   },
   {
@@ -106,9 +131,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Ironhack is cool.', 'I love Ironhack.', 'I am a student at Ironhack.']\n"
+     ]
+    }
+   ],
    "source": [
     "print(corpus)"
    ]
@@ -136,11 +169,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Write your code here"
+    "# Write your code here\n",
+    "#for d in corpus:\n",
+    "  #  print([d.lower().replace(\".\",\"\")])\n",
+    "\n",
+    "a = ([d.lower().replace(\".\",\"\")for d in corpus])"
    ]
   },
   {
@@ -152,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,11 +209,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['ironhack', 'is', 'cool', 'i', 'love', 'am', 'a', 'student', 'at']\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your code here"
+    "# Write your code here\n",
+    "b = ' '.join(a).split()\n",
+    "for i in b:\n",
+    "    if not i in bag_of_words:\n",
+    "        bag_of_words.append(i)\n",
+    "\n"
    ]
   },
   {
@@ -192,9 +242,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['ironhack', 'is', 'cool', 'i', 'love', 'am', 'a', 'student', 'at']\n"
+     ]
+    }
+   ],
    "source": [
     "print(bag_of_words)"
    ]
@@ -208,13 +266,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ironhack\n",
+      "is\n",
+      "cool\n",
+      "i\n",
+      "love\n",
+      "am\n",
+      "a\n",
+      "student\n",
+      "at\n",
+      "ironhack\n",
+      "is\n",
+      "cool\n",
+      "i\n",
+      "love\n",
+      "am\n",
+      "a\n",
+      "student\n",
+      "at\n",
+      "ironhack\n",
+      "is\n",
+      "cool\n",
+      "i\n",
+      "love\n",
+      "am\n",
+      "a\n",
+      "student\n",
+      "at\n"
+     ]
+    }
+   ],
    "source": [
     "term_freq = []\n",
-    "\n",
-    "# Write your code here"
+    "for h in corpus:\n",
+    "    for r in bag_of_words:\n",
+    "        print(r)"
    ]
   },
   {
@@ -228,9 +321,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n"
+     ]
+    }
+   ],
    "source": [
     "print(term_freq)"
    ]
@@ -278,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,7 +434,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
