challeng 2 in process

--- a/module-1/lab-string-operations/your-code/challenge-2.ipynb
+++ b/module-1/lab-string-operations/your-code/challenge-2.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,13 +88,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "corpus = []\n",
     "\n",
-    "# Write your code here\n"
+    "for i in docs:\n",
+    "    file = open(i, 'r') \n",
+    "    corpus.append(file.readline())\n"
    ]
   },
   {
@@ -106,9 +108,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Ironhack is cool.', 'I love Ironhack.', 'I am a student at Ironhack.']\n"
+     ]
+    }
+   ],
    "source": [
     "print(corpus)"
    ]
@@ -136,11 +146,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['ironhack is cool', 'i love ironhack', 'i am a student at ironhack']\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your code here"
+    "corpus_lower = [c.lower().replace('.','') for c in corpus]\n",
+    "\n",
+    "print(corpus_lower)"
    ]
   },
   {
@@ -152,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,11 +192,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['ironhack', 'is', 'cool', 'i', 'love', 'am', 'a', 'student', 'at']\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your code here"
+    "corpus_lower_string = ' '.join(corpus_lower).split(\" \")\n",
+    "bag_of_words= []\n",
+    "for i in corpus_lower_string:\n",
+    "    if i not in bag_of_words:\n",
+    "         \n",
+    "            \n",
+    "        bag_of_words.append(i)\n",
+    "\n",
+    "print(bag_of_words)\n",
+    "\n",
+    "\n",
+    "    \n",
+    "\n",
+    "    \n",
+    "\n",
+    "    \n",
+    "    \n"
    ]
   },
   {
@@ -192,9 +236,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['ironhack', 'is', 'cool', 'i', 'love', 'am', 'a', 'student', 'at']\n"
+     ]
+    }
+   ],
    "source": [
     "print(bag_of_words)"
    ]
@@ -208,11 +260,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Ironhack is cool.', 'I love Ironhack.', 'I am a student at Ironhack.']\n",
+      "['ironhack', 'is', 'cool', 'i', 'love', 'am', 'a', 'student', 'at']\n",
+      "Ironhack is cool.\n",
+      "I love Ironhack.\n",
+      "I am a student at Ironhack.\n",
+      "Ironhack is cool.\n",
+      "I love Ironhack.\n",
+      "I am a student at Ironhack.\n",
+      "Ironhack is cool.\n",
+      "I love Ironhack.\n",
+      "I am a student at Ironhack.\n",
+      "Ironhack is cool.\n",
+      "I love Ironhack.\n",
+      "I am a student at Ironhack.\n",
+      "Ironhack is cool.\n",
+      "I love Ironhack.\n",
+      "I am a student at Ironhack.\n",
+      "Ironhack is cool.\n",
+      "I love Ironhack.\n",
+      "I am a student at Ironhack.\n",
+      "Ironhack is cool.\n",
+      "I love Ironhack.\n",
+      "I am a student at Ironhack.\n",
+      "Ironhack is cool.\n",
+      "I love Ironhack.\n",
+      "I am a student at Ironhack.\n",
+      "Ironhack is cool.\n",
+      "I love Ironhack.\n",
+      "I am a student at Ironhack.\n"
+     ]
+    }
+   ],
    "source": [
+    "\n",
     "term_freq = []\n",
+    "print(corpus)\n",
+    "print(bag_of_words)\n",
+    "for i in bag_of_words:\n",
+    "    for i in corpus:\n",
+    "        print(i)\n",
+    " \n",
     "\n",
     "# Write your code here"
    ]
@@ -228,9 +323,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n"
+     ]
+    }
+   ],
    "source": [
     "print(term_freq)"
    ]
@@ -278,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
